--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,35 +3,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Manifiesto</h2>
+                    
+<p><strong>Barrio de libros</strong> es una asociación de editoriales disidentes unidas por valores e intereses comunes. Somos independientes porque no estamos adscritas a ningún gran grupo editorial o vinculadas a competición alguna por monopolizar el mercado: nuestra manera de trabajar es distinta. Creemos que otro mundo del libro es posible y que ese otro mundo no llegará si no nos organizamos para materializarlo aquí y ahora.</p>
+<p>Creemos que la relación entre el libro y el lector no debe estar mediada por el <em>marketing</em>, que en el mundo editorial no debe regir una lógica consumista y predatoria que transforme el libro en un objeto fungible que desaparece de las librerías cuando los ritmos frenéticos de las distribuidoras así lo deciden. Creemos que la producción de nuestros libros debe ser coherente con el mundo que habitamos, por tanto sostenible, y que no contribuya a aumentar desigualdades entre ideas, personas o colectivos.</p>
+<p>Creemos que todos los libros deben tener las mismas oportunidades de llegar a su lector ideal, de estar al alcance de todo aquel que quiera leerlos. Sabemos que la meritocracia es un mito, que nunca se compite en igualdad de condiciones porque todas estamos sujetas a unas lógicas del mercado que nos preceden y condicionan, que no se llega a los lectores únicamente a través del esfuerzo individual ni la excelencia. Construir un nuevo mundo del libro requiere una nueva forma de organización.</p>
+<p>Por eso nos unimos. Porque creemos en el apoyo mutuo, en la autogestión y en que la unión hace la fuerza. En la heterogeneidad y en la horizontalidad. En las redes de apoyo. En el potencial de los libros para configurar nuevas relaciones que trasciendan la dimensión de los propios libros. No solo porque queremos un mundo más justo, sino porque queremos, sobre todo, un mundo en que los libros puedan cambiar el mundo.</p>
                 </div>
             </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
+             </div>
             </div>
         </div>
     </section>
