--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -7,7 +7,8 @@
 body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #{{ site.data.template.color.secondary-dark }};
+    color: #545454;
+    background-color: #F8EDE4;
 }
 
 .text-muted {
@@ -15,7 +16,7 @@ body {
 }
 
 .text-primary {
-    color: #{{ site.data.template.color.primary }};
+    color:#000 ;
 }
 
 p {
@@ -62,7 +63,7 @@ h6 {
 }
 
 .bg-light-gray {
-    background-color: #f7f7f7;
+    background-color: #F8EDE4;
 }
 
 .bg-darkest-gray {
@@ -119,15 +120,17 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .btn-xl {
+    position: relative;
+    margin: auto;
     padding: 20px 40px;
-    border-color: #{{ site.data.template.color.primary }};
-    border-radius: 3px;
+    border-color: #545454;
+    border-radius: 25px;
     text-transform: uppercase;
-    font-family: {{ site.data.template.font.primary }};
+    font-family: Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 18px;
     font-weight: 700;
-    color: #fff;
-    background-color: #{{ site.data.template.color.primary }};
+    color: #545454;
+    background-color: #F8EDE4;
 }
 
 .btn-xl:hover,
@@ -176,15 +179,15 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #{{ site.data.template.color.primary }};
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #000;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #{{ site.data.template.color.secondary }};
+    color: #{{ site.data.template.color.primary }};
 }
 
 .navbar-default .navbar-collapse {
@@ -197,7 +200,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #fff;
+    background-color: #{{ site.data.template.color.secondary }};
 }
 
 .navbar-default .navbar-toggle:hover,
@@ -206,11 +209,10 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .nav li a {
-    text-transform: uppercase;
-    font-family: {{ site.data.template.font.primary }};
-    font-weight: 400;
+    font-family: {{ site.data.template.font.secondary }};
+    font-weight: 300;
     letter-spacing: 1px;
-    color: #fff;
+    color: #000;
     -webkit-transition: all ease .35s;
     -moz-transition: all ease .35s;
     transition: all ease .35s;
@@ -224,13 +226,13 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
-    color: #fff;
+    color: #{{ site.data.template.color.secondary }};
     background-color: #{{ site.data.template.color.primary }};
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
-    color: #fff;
+    color: #555;
     background-color: #{{ site.data.template.color.secondary }};
 }
 
@@ -267,15 +269,15 @@ fieldset[disabled] .btn-xl.active {
 
 header {
     text-align: center;
-    color: #fff;
+    color: #000;
     background-attachment: scroll;
-    background-image: url('{{ site.baseurl }}/img/header-bg.jpg');
-    background-position: center center;
-    background-repeat: none;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    /*background-image: url('{{ site.baseurl }}/img/header-bg.png'); */
+   
+    background-repeat: no-repeat;
+    -webkit-background-size: 42%;
+    -moz-background-size: 42%;
+    background-size: 42%;
+    -o-background-size: 42%;
 }
 
 header .intro-text {
@@ -286,6 +288,7 @@ header .intro-text {
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
     font-family: {{ site.data.template.font.secondary }};
+   
     font-size: 22px;
     font-style: italic;
     line-height: 22px;
@@ -293,6 +296,7 @@ header .intro-text .intro-lead-in {
 
 header .intro-text .intro-heading {
     margin-bottom: 25px;
+    
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
     font-size: 50px;
@@ -300,9 +304,11 @@ header .intro-text .intro-heading {
     line-height: 50px;
 }
 
+header .intro-text  img {max-width: 50%;}
+
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 100px;
         padding-bottom: 200px;
     }
 
@@ -641,7 +647,9 @@ section h3.section-subheading {
     margin: 0 auto;
     border: 7px solid #fff;
 }
-
+.img-circle {
+    max-width 50%!important;
+}
 .team-member h4 {
     margin-top: 25px;
     margin-bottom: 0;
