--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -26,14 +26,14 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="YTu mensaje *" id="message" required data-validation-required-message="Por favor, escribe un mensaje."></textarea>
+                                    <textarea class="form-control" placeholder="Tu mensaje *" id="message" required data-validation-required-message="Por favor, escribe un mensaje."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <button type="submit" class="btn btn-xl">Envía tu mensaje</button>
                             </div>
                         </div>
                     </form>
