--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form
+  action="https://formspree.io/f/xeqnzvqy"
+  method="POST" >
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="control-group form-group">
@@ -16,17 +18,17 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="email" class="form-control" placeholder="Tu Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" class="form-control" placeholder="Tu Email *" name="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="tel" class="form-control" placeholder="Tu teléfono *" id="phone" required data-validation-required-message="Por favor escribe tu número de teléfono.">
+                                    <input type="tel" class="form-control" placeholder="Tu teléfono *" name="phone" required data-validation-required-message="Por favor escribe tu número de teléfono.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="Tu mensaje *" id="message" required data-validation-required-message="Por favor, escribe un mensaje."></textarea>
+                                    <textarea class="form-control" placeholder="Tu mensaje *" name="message" required data-validation-required-message="Por favor, escribe un mensaje."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
