--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,41 +1,45 @@
 <section id="contact">
-      
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Escríbenos</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
-
-            
-                    <form action="https://formspree.io/f/xeqnzvqy" method="POST" >
+            <div class="row">
+                <div class="col-lg-12">
+                    <form
+  action="https://formspree.io/f/xeqnzvqy"
+  method="POST" >
                         <div class="row">
-                            <div class="col-lg-8">
+                            <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <div class="col-lg-12 text-center">
-                                    <label>
-                                        Your email:
-                                        <input type="email" name="email">
-                                      </label>
-                                    </div>
-                                      <div class="col-lg-3 text-center">
-                                      <label>
-                                        Your message:
-                                        <textarea name="message"></textarea>
-                                      </label>>
-                                      </div>
-                                      <div class="col-lg-8 text-center">
-                                          <button type="submit">Send</button>
-                                    </div>
-                                                                    
+                                    <input type="text" class="form-control" placeholder="Tu nombre *" name="name" required data-validation-required-message="Por favor, dime tu nombre.">
+                                    <p class="help-block text-danger"></p>
                                 </div>
-                               
-                                
+                                <div class="control-group form-group">
+                                    <input type="email" class="form-control" placeholder="Tu Email *" name="email" required data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="control-group form-group">
+                                    <input type="tel" class="form-control" placeholder="Tu teléfono *" name="phone" required data-validation-required-message="Por favor escribe tu número de teléfono.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
                             </div>
-                            
-                            
-                           
+                            <div class="col-md-6">
+                                <div class="control-group form-group">
+                                    <textarea class="form-control" placeholder="Tu mensaje *" name="message" required data-validation-required-message="Por favor, escribe un mensaje."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="btn btn-xl">Envía tu mensaje</button>
+                            </div>
                         </div>
                     </form>
-                
-</section>
+                </div>
+            </div>
+        </div>
+    </section>
