--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -650,6 +650,7 @@ section h3.section-subheading {
 .team-member img {
     margin: 0 auto;
     border: 7px solid #fff;
+    max-height: 300px;
 }
 .img-circle {
     max-width 50%!important;
