--- a/_includes/editoriales_asociadas.html
+++ b/_includes/editoriales_asociadas.html
@@ -12,18 +12,10 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
-                        <h4>{{ member.name }}</h4>
-                        <p class="text-muted">{{ member.position }}</p>
-                        <ul class="list-inline social-buttons">
-                            {% for network in member.social %}
-                            <li>
-                                <a href="{{ network.url }}">
-                                    <i class="fa fa-{{ network.title }}"></i>
-                                </a>
-                            </li>
-                            {% endfor %}
-
-                        </ul>
+                        {% for network in member.social %}
+                        <h4><a href="{{ network.url }}">{{ member.name }}</a></h4>
+                        {% endfor %}
+                       
                     </div>
                 </div>
                 {% endfor %}
