--- a/_includes/editoriales_asociadas.html
+++ b/_includes/editoriales_asociadas.html
@@ -12,7 +12,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         {% for network in member.social %}
-                        <a href="{{ network.url }}" target="_blank"></a><img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt=""></a>
+                        <a href="{{ network.url }}" target="_blank"><img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt=""></a>
                         {% endfor %}
                         <h4>{{ member.name }}</h4>
                                                
