--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,22 +11,16 @@
                 {% for member in site.people %}
                 <div class="col-lg-3">
                     <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.png" class="img-responsive img-circle" alt="">
+                        {% for network in member.social %}
+                            
+                        <a href="{{ network.url }}"></a><img src="img/team/{{ member.pic }}.png" class="img-responsive img-circle" alt=""> </a>
+                        {% endfor %}
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
-                        <ul class="list-inline social-buttons">
-                            {% for network in member.social %}
-                            <li>
-                                <a href="{{ network.url }}">
-                                    <i class="fa fa-{{ network.title }}"></i>
-                                </a>
-                            </li>
-                            {% endfor %}
-
-                        </ul>
+                        {% endfor %}
                     </div>
                 </div>
-                {% endfor %}
+                
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
