--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,16 +11,22 @@
                 {% for member in site.people %}
                 <div class="col-lg-3">
                     <div class="team-member">
-                        {% for network in member.social %}
-                            
-                        <a href="{{ network.url }}"></a><img src="img/team/{{ member.pic }}.png" class="img-responsive img-circle" alt=""> </a>
-                        {% endfor %}
+                        <img src="img/team/{{ member.pic }}.png" class="img-responsive img-circle" alt="">
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
-                        {% endfor %}
+                        <ul class="list-inline social-buttons">
+                            {% for network in site.website %}
+                            <li>
+                                <a href="{{ network.website }}">
+                                    <i class="fa fa-{{ network.name }}"></i>
+                                </a>
+                            </li>
+                            {% endfor %}
+
+                        </ul>
                     </div>
                 </div>
-                
+                {% endfor %}
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
