--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,7 +11,7 @@
                 {% for member in site.people %}
                 <div class="col-lg-3">
                     <div class="team-member">
-                        <a href="{{ member.website }}"><img src="img/team/{{ member.pic }}.png" class="img-responsive img-circle" alt=""></a>
+                        <a href="{{ member.website }}" target="_blank"><img src="img/team/{{ member.pic }}.png" class="img-responsive img-circle" alt=""></a>
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
                         
