change 'sello garantia' x 'sello de confianza'

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                         <a class="page-scroll" href="#services">Quienes somos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Sello de garantía</a>
+                        <a class="page-scroll" href="#portfolio">Sello de confianza</a>
                     </li>
                     
                     <li>
