quitar sello de confianza dessde css -> agency.css, 883

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -879,3 +879,6 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
 }
+
+#portfolio .portfolio-item .portfolio-caption {
+    visibility: hidden; display: none}
