quitar sello de confianza dessde css -> agency.css, 883, reprise

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -880,5 +880,5 @@ body {
     webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
 }
 
-#portfolio .portfolio-item .portfolio-caption {
+section#portfolio .portfolio-item .portfolio-caption {
     visibility: hidden; display: none}
