--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -880,5 +880,7 @@ body {
     webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
 }
 
-section#portfolio .portfolio-item .portfolio-caption {
-    visibility: hidden; display: none}
+#portfolio {
+    display: none;
+    visibility: hidden;
+  }
