--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -14,7 +14,7 @@
                     <p>Estamos trabajando en la elaboración de un catálogo conjunto para presentar a librerías, bibliotecas e instituciones.</p>
                     <h3>¿Qué esperamos de ti?</h3>
                     <p>Esperamos tu participación activa en la estructura y funcionamiento de la asociación. Barrio de libros es un canal abierto de comunicación donde compartir aportaciones y sugerencias.</p>
-                    <p>Tenemos un código de regulación interna que hay que conocer y cumplir y que garantiza que la asociación es un espacio lo más seguro posible para sus integrantes y las personas que se relacionan con ella. Si te interesa formar parte de Barrio de libros, escríbenos a: asociacionbarriodelibros@gmail.com y te enviaremos más información.</p>
+                    <p>Tenemos un código de regulación interna que hay que conocer y cumplir y que garantiza que la asociación es un espacio lo más seguro posible para sus integrantes y las personas que se relacionan con ella. Si te interesa formar parte de Barrio de libros, escríbenos a: asociacionbarriodelibros@gmail.com o completa el fomulario de abajo, y te enviaremos más información.</p>
                 </div>
             </div>
             <div class="row">
