change color font in contact

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,21 +2,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Escríbenos</h2>
-                    <h3 class="section-subheading text-muted">¿Qué es Barrio de libros?</h3>
-
+                    <h2 class="section-heading">¿Qué es Barrio de libros?</h2>
+                    
                     <p>Barrio de libros es una asociación de editoriales disidentes unidas por valores e intereses comunes. Somos disidentes porque no estamos adscritas a ningún gran grupo editorial o vinculadas a competición alguna por monopolizar el mercado: nuestra manera de trabajar es distinta. Creemos que otro mundo del libro es posible y que ese otro mundo no llegará si no nos organizamos para materializarlo aquí y ahora.</p>
                     
-                    <h3>¿Qué hacemos/ofrecemos?</h3>
+                    <h3 class="section-heading">¿Qué hacemos/ofrecemos?</h3>
                     <p>Una red de apoyo mutuo entre editoriales de infraestructuras similares. Esto nos permite resolver dudas entre nosotras, intercambiar información (subvenciones, tarifas), compartir documentos, organizar eventos en conjunto o hacer llegar los libros de las editoriales compañeras a eventos a los que normalmente no se tendría acceso.</p>
                     <p>Por norma general, a editoriales de nuestro tamaño, filosofía o infraestructura no se nos suele tener en cuenta dentro de la industria del libro. Nos agrupamos para unir fuerzas a la hora de tratar con las instituciones, crear nuevos espacios y reclamar nuestro lugar dentro del sector.
                     <p>Queremos trabajar en conjunto con librerías que tengan una manera afín de entender el mundo del libro.</p>
                     <p>Estamos trabajando en la elaboración de un catálogo conjunto para presentar a librerías, bibliotecas e instituciones.</p>
-                    <h3>¿Qué esperamos de ti?</h3>
+                    <h3 class="section-heading">¿Qué esperamos de ti?</h3>
                     <p>Esperamos tu participación activa en la estructura y funcionamiento de la asociación. Barrio de libros es un canal abierto de comunicación donde compartir aportaciones y sugerencias.</p>
                     <p>Tenemos un código de regulación interna que hay que conocer y cumplir y que garantiza que la asociación es un espacio lo más seguro posible para sus integrantes y las personas que se relacionan con ella. Si te interesa formar parte de Barrio de libros, escríbenos a: asociacionbarriodelibros@gmail.com o completa el fomulario de abajo, y te enviaremos más información.</p>
                 </div>
             </div>
+            <h3 class=""text-muted"></h3>
             <div class="row">
                 <div class="col-lg-12">
                     <form
