cambiar color seccion manifiesto

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Manifiesto</h2>
+                    <h2 class="section-heading negro">Manifiesto</h2>
                     
 <p><strong>Barrio de libros</strong> es una asociación de editoriales disidentes unidas por valores e intereses comunes. Somos disidentes porque no estamos adscritas a ningún gran grupo editorial o vinculadas a competición alguna por monopolizar el mercado: nuestra manera de trabajar es distinta. Creemos que otro mundo del libro es posible y que ese otro mundo no llegará si no nos organizamos para materializarlo aquí y ahora.</p>
 <p>Creemos que la relación entre el libro y el lector no debe estar mediada por el <em>marketing</em>, que en el mundo editorial no debe regir una lógica consumista y predatoria que transforme el libro en un objeto fungible que desaparece de las librerías cuando los ritmos frenéticos de las distribuidoras así lo deciden. Creemos que la producción de nuestros libros debe ser coherente con el mundo que habitamos, por tanto sostenible, y que no contribuya a aumentar desigualdades entre ideas, personas o colectivos.</p>
