tunear mensaje to match marta's prop

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -25,21 +25,22 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <input type="text" class="form-control" placeholder="Tu nombre *" name="name" required data-validation-required-message="Por favor, dime tu nombre.">
+                                    <input type="text" class="form-control" placeholder="Nombre de tu editorial*" name="name" required data-validation-required-message="Por favor, dime el nombre de tu editorial nombre.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="control-group form-group">
+                                    <input type="text" class="form-control" placeholder="Persona de contacto *" name="phone" required data-validation-required-message="Por favor escribe el nombre de la persona de contacto.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
                                     <input type="email" class="form-control" placeholder="Tu Email *" name="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
-                                <div class="control-group form-group">
-                                    <input type="tel" class="form-control" placeholder="Tu teléfono *" name="phone" required data-validation-required-message="Por favor escribe tu número de teléfono.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
+                                
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="Tu mensaje *" name="message" required data-validation-required-message="Por favor, escribe un mensaje."></textarea>
+                                    <textarea class="form-control" placeholder="Tu mensaje *" name="message" required data-validation-required-message="Por favor, escribe tu mensaje."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
