--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
                     <ul class="list-inline quicklinks">
                         <li><a href="#">Política de privacidad</a>
                         </li>
-                        <li><a href="#">Términos de usoe</a>
+                        <li><a href="#">Términos de uso</a>
                         </li>
                     </ul>
                 </div>
